--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/react": "^3.0.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@netpad/workflow-renderer": "^1.0.0",
     "clsx": "^2.0.0",
     "fuse.js": "^7.1.0",
     "prism-react-renderer": "^2.3.0",
